--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   render: 
     - index.qmd
     - homicide.qmd
+    - un-info-API-R.qmd
 
 website:
   title: ""
@@ -12,6 +13,8 @@ website:
         text: Home
       - href: homicide.qmd
         text: Homicide
+      - href: un-info-API-R.qmd
+        text: UN INFO API
 
 
 format:
