--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ _site/site_libs/bootstrap/bootstrap.min 2.css
 _site/site_libs/quarto-dashboard/datatables.min 2.js
 _site/site_libs/quarto-dashboard/pdfmake.min 2.js
 _site/site_libs/quarto-dashboard/vfs_fonts 2.js
+data_sources.qmd
+functions/click_renderer.R
